--- a/index.html
+++ b/index.html
@@ -42,20 +42,10 @@
                         <section class="secao-1">
                             <h1 class="robinho">Prof. Robinho</h1>
                             <p></p>
-                                <a href="desafio 1.html" class="btn btn-info link-a-1">Desafio 1</a>
-                                <a href="desafio 2.html" class="btn btn-info link-a-1">Desafio 2</a>
-                                <a href="desafio 3.html" class="btn btn-info link-a-1">Desafio 3</a>
-                                <a href="desafio 4.html" class="btn btn-info link-a-1">Desafio 4</a>
-                                <a href="desafio 5.html" class="btn btn-info link-a-1">Desafio 5</a>
-                                <a href="desafio 6.html" class="btn btn-info link-a-1">Desafio 6</a>
-                                <a href="desafio 7.html" class="btn btn-info link-a-1">Desafio 7</a>
-                                <a href="desafio 8.html" class="btn btn-info link-a-1">Desafio 8</a>
-                                <a href="desafio 9.html" class="btn btn-info link-a-1">Desafio 9</a>
-                                <a href="desafio 10.html" class="btn btn-info link-a-1">Desafio 10</a>
-                                <a href="desafio 11.html" class="btn btn-info link-a-1">Desafio 11</a>
-                                <a href="desafio 12.html" class="btn btn-info link-a-1">Desafio 12</a>
-                                <a href="desafio 13.html" class="btn btn-info link-a-1">Desafio 13</a>
-                                <a href="desafio 14.html" class="btn btn-info link-a-1">Desafio 14</a>
+                                <a href="https://erikckcckkckkkc.github.io/coolrepository/index.html" class="btn btn-info link-a-1">TRICOLOR</a>
+                                <a href="https://erikckcckkckkkc.github.io/MEUDEUES/Index.html" class="btn btn-info link-a-1">OFICINA DE CARRO</a>
+                                <a href="https://erikckcckkckkkc.github.io/butistrapi/bootstrap.html" class="btn btn-info link-a-1">SOUTHAMPTON</a>
+                                <a href="https://erikckcckkckkkc.github.io/desafios/index.html" class="btn btn-info link-a-1">DESAFIOS</a>
                         </section>
                     </div>
 
