--- a/index.html
+++ b/index.html
@@ -39,7 +39,12 @@
                                 <a href="https://erikckcckkckkkc.github.io/butistrapi/bootstrap.html" class="btn btn-info link-a-1">SOUTHAMPTON</a>
                                 <a href="https://erikckcckkckkkc.github.io/desafios/index.html" class="btn btn-info link-a-1">DESAFIOS</a>
                                 <a href="https://erikckcckkckkkc.github.io/aula5/aula5.html" class="btn btn-info link-a-1">"AULA5"</a>
-                                <a href="https://erikckcckkckkkc.github.io/mobile/minidesafios.html" class="btn btn-info link-a-1">"MOBILE"</a>
+                                <a href="https://erikckcckkckkkc.github.io/mobile/minidesafios.html" class="btn btn-info link-a-1">MOBILE</a>
+                                <a href="" class="btn btn-info link-a-1">extra1</a>
+                                <a href="" class="btn btn-info link-a-1">extra2</a>
+                                <a href="" class="btn btn-info link-a-1">extra3</a>
+                                <a href="" class="btn btn-info link-a-1">extra4</a>
+                                <a href="" class="btn btn-info link-a-1">extra5</a>
                         </section>
                     </div>
 
