--- a/index.html
+++ b/index.html
@@ -48,25 +48,24 @@
                         </section>
                     </div>
 
-                    <div class="col">
-                        <section class="secao-2">
+                    <div class="secao-1">
+                        <section class="secao-1">
                             <div class="img">
                                 <img src="imagens/pacman.png" alt="">
                             </div>
                         </section>
                     </div>
 
-                    <div class="col">
-                        <section class="secao-3">
-                            <p>
-                               
+                    <div class="secao-1">
+                        <section class="secao-1">
+                            <p>  
                             </p>
                             <img class="img-col" src="www.webp" alt="">
                         </section>
                     </div>
 
-                    <div class="col">
-                        <section class="secao-4">
+                    <div class="secao-1">
+                        <section class="secao-1">
                             <p>
                             </p>
                             <img class="img-col" src="tela.png" alt="">
