--- a/index.html
+++ b/index.html
@@ -26,11 +26,10 @@
     </header>
 
     <main>
-        <! USANDO bootstrap>
-            <div class="container text-center">
-                <div class="row">
+            <div class="secao-1">
+                
 
-                    <div class="secao-1">
+                    <div class="col">
                         <section class="secao-1">
                             <h1 class="robinho">Prof. Robinho</h1>
                             <p></p>
@@ -93,6 +92,8 @@
                         </section>
                     </div>
 
+                    <div class="linha-divisoria"></div>
+
                     <div class="secao-1">
                         <section class="secao-1">
                             <p></p>
@@ -100,7 +101,7 @@
                         </section>
                     </div>
 
-                </div>
+                
             </div>
             <script>
                 let slideIndex = 0;
