--- a/index.html
+++ b/index.html
@@ -44,10 +44,7 @@
                 <a href="https://erikckcckkckkkc.github.io/aula5/aula5.html" class="btn btn-info link-a-1">"AULA5"</a>
                 <a href="https://erikckcckkckkkc.github.io/mobile/minidesafios.html"
                     class="btn btn-info link-a-1">MOBILE</a>
-                <a href="" class="btn btn-info link-a-1">Carregando</a>
-                <a href="" class="btn btn-info link-a-1">Carregando</a>
-                <a href="" class="btn btn-info link-a-1">Carregando</a>
-                <a href="" class="btn btn-info link-a-1">Carregando</a>
+                <a href="https://www.16personalities.com/br/teste-de-personalidade" class="btn btn-info link-a-1">TESTE DE PERSONALIDADE</a>
             </div>
 
             <div>
