--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                     Evolução constante: JavaScript está em constante evolução, com novas funcionalidades e
                     ferramentas surgindo a
                     todo momento, garantindo que você sempre tenha algo novo para aprender.
-                    <img class="img2" src="https://media1.tenor.com/m/DMHk0nKIGmYAAAAd/byuntear-cachorro.gif">
+                    <img class="img2" src="imagens/img6.jpeg">
                     Salários competitivos: Profissionais com expertise em JavaScript são bem remunerados,
                     especialmente aqueles que
                     dominam frameworks modernos como React e Angular.
