--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
                 <a href="https://erikckcckkckkkc.github.io/mobile/minidesafios.html"
                     class="btn btn-info link-a-1">MOBILE</a>
                 <a href="https://www.16personalities.com/br/teste-de-personalidade" class="btn btn-info link-a-1">TESTE DE PERSONALIDADE</a>
+                <a href="https://erikckcckkckkkc.github.io/filmes/index.html" class="btn btn-info link-a-1">TESTE DE PERSONALIDADE</a>
             </div>
 
             <div>
